# curso-agentes-langgraph

./: README.md  docker-compose.yml  langgraph.json  pyproject.toml
docs/: ARCHITECTURE.md
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured-output.ipynb  09-prompting.ipynb  10-tools.ipynb  notebook.ipynb
src/agents/: code_review.py  main.py  orchestrator.py  rag.py  react.py  simple.py
src/agents/support/: agent.py
src/agents/support/nodes/booking/: node.py
src/agents/support/nodes/conversation/: node.py
src/agents/support/nodes/extractor/: node.py
src/agents/support/routes/intent/: route.py
src/api/: db.py  main.py
