[project]
name = "my-course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.0.0a6",
    "langchain-anthropic>=1.0.0a1",
    "langchain-openai>=1.0.0a2",
    "langgraph>=1.0.0a3",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langgraph-cli[inmem]>=0.4.2",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
